# ai-agent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  empty.env  inspect_db.py  main.py  pyproject.toml  pytest.ini  requirements.txt  service.template
.github/workflows/: quality-gate.yml
src/config/: config_loader.py  home_agent_config.toml  llm_config.toml  logging_config.py  settings.py
src/core/: agent.py  tools.py
src/db/: __init__.py  connection.py  database.py  models.py  service.py
src/debug/gll/: main.py  tools.py
src/llm/: client.py  registry.py
src/llm/tools/: example_tool.py
src/llms/: tools.py
src/llms/gemini_default/: gemini.py  llm_config.toml  tools.py
src/services/: chat_service.py
src/tools/: example_tool.py  recipe_tool.py
tests/: conftest.py
tests/config/: test_config_loader.py  test_logging_config.py  test_settings.py
tests/core/: test_agent.py  test_tools.py
tests/db/: test_db.py  test_race_conditions.py  test_session_security.py  test_sql_injection.py  test_token_count.py
tests/llms/: test_gemini_init.py
tests/services/: test_chat_service.py  test_resource_exhaustion.py
