[project]
name = "ai-agents"
version = "0.3.0"
description = "AI Agents Service with FastAPI and Gemini"
readme = "README.md"
requires-python = ">=3.12"

# Although we use requirements.txt for Docker, defining the build system
# is good practice for modern Python tooling.
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# --- Tool Configuration ---

# Pytest Configuration (formerly pytest.ini)
[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
]

# Future tools like Black, Isort, or Ruff can be configured here easily.